iptables.rules
# Explanations:
# 43 is whois
# 67 & 68 is DHCP
# 123 is NTP
# 2000 is PIA port forwarding assignment
# 4070 is spotify streaming
# 57621 is spotify connect
# 5353 is multicast DNS
# 1900 is universal plug and play discovery
# 1198 is PIA openvpn gateway

*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT DROP [0:0]

# allow all communication on localhost
-A INPUT -i lo -j ACCEPT
-A OUTPUT -o lo -j ACCEPT

# allow icmp
-A INPUT -p icmp -j ACCEPT
-A OUTPUT -p icmp -j ACCEPT
-A INPUT -p icmpv6 -j ACCEPT
-A OUTPUT -p icmpv6 -j ACCEPT

-A INPUT -m state --state ESTABLISHED,RELATED -j ACCEPT
-A OUTPUT -m state --state ESTABLISHED,RELATED -j ACCEPT

-A OUTPUT -p tcp -m tcp --dport 22 -m state --state NEW -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 43 -m state --state NEW -j ACCEPT
-A OUTPUT -p udp -m udp --dport 53 -m state --state NEW -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 53 -m state --state NEW -j ACCEPT
-A OUTPUT -p udp -m udp --dport 67 -m state --state NEW -j ACCEPT
-A OUTPUT -p udp -m udp --dport 68 -m state --state NEW -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 80 -m state --state NEW -j ACCEPT
-A OUTPUT -p udp -m udp --dport 123 -m state --state NEW -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 443 -m state --state NEW -j ACCEPT
-A OUTPUT -p udp -m udp --dport 1198 -m state --state NEW -j ACCEPT
-A OUTPUT -p udp -m udp --dport 1900 -m state --state NEW -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 2000 -m state --state NEW -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 4070 -m state --state NEW -j ACCEPT
-A OUTPUT -p udp -m udp --dport 5353 -m state --state NEW -j ACCEPT
-A OUTPUT -p udp -m udp --dport 57621 -m state --state NEW -j ACCEPT

-A INPUT -m limit --limit 5/min --limit-burst 3 -j LOG
-A OUTPUT -m limit --limit 5/min --limit-burst 3 -j LOG

COMMIT
